--- a/block-BRaabw/react_shopping_cart/src/styles/index.css
+++ b/block-BRaabw/react_shopping_cart/src/styles/index.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html,
 body,
 div,
@@ -187,6 +183,11 @@ body {
 .header {
   margin-bottom: 3rem;
 }
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0 auto;
+}
 h2 {
   font-size: 1.5rem;
   font-weight: bold;
@@ -212,7 +213,7 @@ strong {
 .img-box img {
   width: 100%;
 }
-button {
+.card .btn {
   border: none;
   padding: 0.8rem 2rem;
   background-color: black;
@@ -220,13 +221,14 @@ button {
   margin-top: 0.5rem;
   cursor: pointer;
 }
-.card hr {
+.card .hr {
   width: 12%;
   border: none;
   border-top: 2px solid goldenrod;
+  margin: 0 auto;
   margin-top: 2rem;
 }
-.card:hover button {
+.card:hover .btn {
   background-color: goldenrod;
 }
 p {
@@ -393,11 +395,7 @@ select {
 }
 
 /* Login Page  */
-h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  text-align: left;
-}
+
 form {
   width: 30%;
   margin: 2rem auto;
@@ -428,3 +426,7 @@ form {
 .login button {
   border-radius: 4px;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
