--- a/block-BRaabw/react_shopping_cart/src/styles/index.css
+++ b/block-BRaabw/react_shopping_cart/src/styles/index.css
@@ -330,12 +330,14 @@ p {
   font-size: 1.5rem;
   margin: 0;
 }
-.checkout button {
+.checkout .btn-secondary {
   width: 100%;
   font-size: 1rem;
   padding: 1rem 0;
   margin-top: 3rem;
   margin-bottom: 1rem;
+  background-color: darkgoldenrod;
+  color: white;
 }
 .close-cart,
 .open-cart {
